tests/suite/fail/modules/selective_missing.ny
//~ ERROR cannot import `missing`
import { missing } from "math.ny"

fn main() {
    print(1)
}
